<resources>
    <string name="app_name">Lab7</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I’m a button</string>
    <string name="TextView">Look at my GUI</string>
    <string name="ButtonClick">Click here</string>
    <string name="CheckBoxText">Check this out!</string>
    <string name="Switch">Switch on / off</string>
    <string name="EditText">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="snackbar_on">The switch is now on</string>
    <string name="snackbar_off">The switch is now off</string>
    <string name="Undo">Undo</string>
    <string name="TextViewEmail">Enter your email address:</string>
    <string name="TextViewPass">Type your password:</string>
    <string name="EditTextEmail">Type email here</string>
    <string name="LoginButton">LOGIN</string>
    <string name="Profile">Your profile</string>
    <string name="Name">Your name:</string>
    <string name="TypeName">Enter your name</string>
    <string name="Email">Your email:</string>
    <string name="TypeEmail">Enter your email</string>
    <string name="Picture">Your picture:</string>
    <string name="UnderButton">Click the button above to take a picture</string>
    <string name="goToChat">Go to chat</string>
    <string name="sendBtn">SEND</string>
    <string name="receiveBtn">RECEIVE</string>
    <string name="chatInput">Type here</string>
    <string name="deleteAlert">Do you want to delete this?</string>
    <string name="selectedRow">The selected row is</string>
    <string name="databaseId">The database id is</string>
    <string name="deleteBtn">Delete</string>
    <string name="cancelBtn">Cancel</string>
    <string name="goToToolbar">Go to Toolbar page</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


</resources>