<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewEmail" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EditTextEmail"
        android:inputType="textEmailAddress">
    </EditText>

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewPass" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginButton"
        android:textColor="@color/black"
        android:backgroundTint="@color/lightGray"/>

</LinearLayout>