<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:columnCount="2"
    android:rowCount="4"
    android:id="@+id/layoutRoot">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/TextView"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/ButtonClick" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/CheckBoxText" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_weight="1"
        android:gravity="fill"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/Switch" />

    <EditText
        android:id="@+id/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:inputType="textPersonName"
        android:text="@string/EditText">

    </EditText>
</GridLayout>