<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity"
    android:orientation="vertical">

        <ListView
            android:id="@+id/chatListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop ="true"
            android:layout_marginBottom="46dp">

        </ListView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom = "true">

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/sendBtn"
            android:textColor="@color/black"
            android:backgroundTint="@color/lightGray">

        </Button>

        <EditText
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="fill"
            android:hint="@string/chatInput">

        </EditText>

        <Button
            android:id="@+id/receiveBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/receiveBtn"
            android:textColor="@color/black"
            android:backgroundTint="@color/lightGray">

        </Button>

    </LinearLayout>




</RelativeLayout>